add max-concurrent-requests (#143)
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>